# charm-ipsum-api

./: .gitignore  Makefile  README.md  coverage.txt  pdm.lock.license  pyproject.toml
src/ipsumapi/: cli.py  main.py
tests/: test_cli.py  test_main.py
